Added first viewable download page(hopefully)

--- a/Downloads.html
+++ b/Downloads.html
@@ -28,7 +28,14 @@
 
     <div class="container">
       <section id="main_content">
-        <p>This is the future download location!</p>
+        <p>Downloads for all of the versions, including the latest version, as uploaded to GitHub*!</p>
+		<a href="https://github.com/shutterbug2000/Corrupt-Android/zipball/master" class="btn">Newest version: 1.3!</a>
+		
+		<p>More uploads to come soon!
+		
+		<p>*GitHub builds contain new features, but aren't fully tested and may contain little/ no bugs, or may have very nasty bugs. Fair warning!</p>
+		<p>However, please let me know if you find issues in these! Just don't tell me that the program doesn't work properly, and that's it. </p>
+		</p>
       </section>
     </div>
 
