--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 
     <div class="container">
       <section id="main_content">
+	  <a href="http://shutterbug2000.github.io/Corrupt-Android/Downloads.html" class="btn">Downloads</a>
         <p>Welcome to the new webpage for Vinecorrupt for Android! This will be expanding over time, and this will be where all updates are published from now on!</p>
+		
+		
       </section>
     </div>
 
