Should be in order for 1.3

--- a/Downloads.html
+++ b/Downloads.html
@@ -29,7 +29,7 @@
     <div class="container">
       <section id="main_content">
         <p>Downloads for all of the versions, including the latest version, as uploaded to GitHub*!</p>
-		<a href="https://github.com/shutterbug2000/Corrupt-Android/zipball/master" class="btn">Newest version: 1.3!</a>
+		<a href="https://github.com/shutterbug2000/Corrupt-Android/blob/master/downloads/Version_1_3.apk" class="btn">Newest version: 1.3!</a>
 		
 		<p>More uploads to come soon!
 		
