--- a/Downloads.html
+++ b/Downloads.html
@@ -29,7 +29,9 @@
     <div class="container">
       <section id="main_content">
         <p>Downloads for all of the versions, including the latest version, as uploaded to GitHub*!</p>
-		<a href="https://github.com/shutterbug2000/Corrupt-Android/blob/master/downloads/Version_1_3.apk?raw=true" class="btn">Newest version: 1.3!</a>
+		<a href="https://github.com/shutterbug2000/Corrupt-Android/blob/master/downloads/Version_1_4.apk?raw=true" class="btn"><b>NEW: Version 1.4</b></a>
+		<br>
+		<a href="https://github.com/shutterbug2000/Corrupt-Android/blob/master/downloads/Version_1_3.apk?raw=true" class="btn">Version 1.3</a>
 		
 		<p>More uploads to come soon!
 		
