--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <div class="container">
       <section id="main_content">
 	  <a href="http://shutterbug2000.github.io/Corrupt-Android/Downloads.html" class="btn">Downloads</a>
+	  <br>
+	   <a href="http://shutterbug2000.github.io/Corrupt-Android/Downloads.html" style="color: #EAEADD"><b>UPDATE 1.4 HAS BEEN RELEASED!!</b></a>
         <p>Welcome to the new webpage for Vinecorrupt for Android! This will be expanding over time, and this will be where all updates are published from now on!</p>
 		
 		
