--- a/status.html
+++ b/status.html
@@ -28,13 +28,16 @@
 
     <div class="container">
       <section id="main_content">
-	  <a href="http://shutterbug2000.github.io/Corrupt-Android/Downloads.html" class="btn">Downloads</a>
-	  <a href="http://shutterbug2000.github.io/Corrupt-Android/status.html" class="btn">Status</a>
-	  <br>
-	   <a href="http://shutterbug2000.github.io/Corrupt-Android/Downloads.html" style="color: #EAEADD"><b>UPDATE 1.4 HAS BEEN RELEASED!!</b></a>
-        <p>Welcome to the new webpage for Vinecorrupt for Android! This will be expanding over time, and this will be where all updates are published from now on!</p>
-		
-		
+        <p>Status:</p>
+		<p>October 19th, 2014:
+		<p>What has happened to the project?:
+		<p>As you probably noticed, this project has been seemingly dead for some time now. It's not. I haven't been actively working on it, but</p>
+		<p>it's not dead. I've just been... very busy lately. School, and just other projects, have gotten in the way of my working on this. </p>
+		<br>
+		<br>
+		<br>
+		<p>I still haven't even finished SNES, but you can be sure it will be completed soon.</p>
+		<p>-shutterbug2000</p>
       </section>
     </div>
 
